--- a/style.css
+++ b/style.css
@@ -559,6 +559,7 @@ h3{
 @media (max-width: 700px) {
     .contact-col-form {
        margin-left: -50px;
+       width: 50%;
      }
      .contact-col div h5{
         font-size: 14px;
