--- a/style.css
+++ b/style.css
@@ -22,6 +22,55 @@ nav{
 nav img{
     width: 135px;
 }
+.dropdown-content-services.show {
+    display: block;
+}
+.dropdown-btn {
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    font-size: 13px;
+    cursor: pointer;
+    padding: 8px 12px;
+    position: relative;
+    transition: 0.5s;
+}
+
+.dropdown-btn::after {
+    content: '▼';
+    font-size: 10px;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f44336;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    transition: 0.5s;
+    text-align: left;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-btn:hover.dropdown-content {
+    display: block;
+}
+
 .nav-links{
     flex: 1;
     text-align: right;
@@ -120,6 +169,10 @@ nav .fa{
     .text-box h1{
         font-size: 20px;
     }
+    .dropdown-btn {
+        align-items: left;
+        padding-left: 0;
+    }
 }
 
 /*---------- services --------*/
@@ -155,6 +208,9 @@ p{
     padding: 20px 12px;
     box-sizing: border-box;
     transition: .5s;
+}
+.services-col a {
+    text-decoration: none;
 }
 h3{
     text-align: center;
@@ -574,3 +630,79 @@ h3{
         
     }
    }
+
+/*----- Roofing -----*/
+.roofBody {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
+    background-color: #fff;
+}
+.roofCont {
+    margin: 100px auto;
+    width: 75%;
+}
+.roofImg {
+    max-width: 350px;
+    float: left;
+    border-radius: 10px;
+    border: 3px solid white;
+    margin-right: 20px;
+}
+.roofText h2{
+    font-size: 50px;
+    padding: 5px;
+}
+.roofText p {
+    font-size: 22px;
+    padding: 6px;
+}
+.brands {
+    display: inline-block;
+    margin: 40px;
+    padding: 59px;
+}
+.HeaderBrands {
+    text-align: center;
+    font-weight: 700;
+    font-size: 50;
+}
+.brands p {
+    font-size: 14px;
+}
+.BrandImg {
+    display: inline;               
+    margin: 10px;
+    padding: 0px;
+    height: 200px;
+    width: 200px;
+}
+@media (max-width:700px){
+    .roofBody{
+        width: 100%;
+        margin-top: 25vh;
+        justify-content: space-between;
+    }
+    .roofImg {
+        float: center;
+        width: 100%;
+        margin-top: 50vh;
+        padding-top: 0;
+        justify-content: space-between;
+    }
+    .roofText h2{
+        font-size: 22px;
+        padding: 5px;
+    }
+    .roofText p{
+        font-size: 12px;
+        padding-top: 5px;
+        padding-bottom: 500px;
+        width: 100%;
+        
+    }
+    
+} 
+
+/*----- Siding -----*/
