--- a/style.css
+++ b/style.css
@@ -553,7 +553,96 @@ h3{
 
 
 /*------- Contact Us Page ------------*/
+.contact {
+    min-height: 100vh;
+    background-color: white;
+    padding: 50px;
+    text-align: center;
+}
+.container {
+    max-width: 800;
+    margin: 0 auto;
+}
+.container h2{
+    font-size: 36px;
+    margin-bottom: 40px;
+    color: #333;
+}
+.contact-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 30px;
+}
+.contact-form {
+    text-align: left;
+}
+.contact-form h3{
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+}
+.form-group {
+    margin-bottom: 20px;
+}
+input, textarea {
+    width: 100%;
+    padding: 12px;
+    border-radius: 8px;
+    border: none;
+    background-color: lightgray;
+    color: #333;
+}
+input:focus,
+textarea:focus {
+    outline: none;
+    box-shadow: 0 0 8px #bbb;
+}
+button{
+    display: inline-block;
+    padding: 12px 4px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+button:hover{
+    background-color: #45a049;
+}
+.contact-info {
+    text-align: left;
+}
+.contact-info h3 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+}
+.contact-info p {
+    margin-bottom: 10px;
+    color: #555;
+}
+.contact-info i {
+    color: #4caf50;
+    margin-right: 10px;
+}
+@media (max-width: 700px) {
+    .container {
+        padding: 20px;
+    }
+    .contact-wrapper {
+        grid-template-columns: 1fr;
+    }
+}
 
+label {
+    margin-bottom: 5px;
+}
+
+
+h1 {
+    text-align: center;
+    margin: 35px 0 20px 0 !important;
+  }
 .location{
     width: 80%;
     margin: auto;
